// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Runtime Conditions > Properly generates documentation for runtime conditions > # Of Files Generated 1`] = `9`;

exports[`Runtime Conditions > Properly generates documentation for runtime conditions > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: runtime-conditions
    items:
    - name: runtime-conditions
      href: runtime-conditions/runtime-conditions.md
    - name: ClassWithNoRuntimeConditions
      href: runtime-conditions/ClassWithNoRuntimeConditions.md
    - name: ClassWithRuntimeConditions
      href: runtime-conditions/ClassWithRuntimeConditions.md
    - name: ClassWithRuntimeConditionsEmpty
      href: runtime-conditions/ClassWithRuntimeConditionsEmpty.md
    - name: InterfaceWithNoRuntimeConditions
      href: runtime-conditions/InterfaceWithNoRuntimeConditions.md
    - name: InterfaceWithRuntimeConditions
      href: runtime-conditions/InterfaceWithRuntimeConditions.md
    - name: InterfaceWithRuntimeConditionsEmpty
      href: runtime-conditions/InterfaceWithRuntimeConditionsEmpty.md
"
`;

exports[`Runtime Conditions > Properly generates documentation for runtime conditions > msdocs/scriptapi/runtime-conditions/ClassWithNoRuntimeConditions.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: runtime-conditions.ClassWithNoRuntimeConditions Class
description: Contents of the runtime-conditions.ClassWithNoRuntimeConditions class.
---
# ClassWithNoRuntimeConditions Class

## Properties

### **propA**
\`read-only propA: propA;\`

Type: [*propA*](propA.md)
"
`;

exports[`Runtime Conditions > Properly generates documentation for runtime conditions > msdocs/scriptapi/runtime-conditions/ClassWithRuntimeConditions.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: runtime-conditions.ClassWithRuntimeConditions Class
description: Contents of the runtime-conditions.ClassWithRuntimeConditions class.
---
# ClassWithRuntimeConditions Class
 
## Required Experiments
- Runtime Conditions A
- Runtime Conditions B
- Runtime Conditions C


## Properties

### **propA**
\`read-only propA: propA;\`

Type: [*propA*](propA.md)

## Methods
- [FunctionWithNoRuntimeConditions](#functionwithnoruntimeconditions)
- [FunctionWithRuntimeConditions](#functionwithruntimeconditions)
- [FunctionWithRuntimeConditionsEmpty](#functionwithruntimeconditionsempty)

### **FunctionWithNoRuntimeConditions**
\`
FunctionWithNoRuntimeConditions(): void
\`

### **FunctionWithRuntimeConditions**
\`
FunctionWithRuntimeConditions(): void
\`
 
#### Required Experiments
- Runtime Conditions D


### **FunctionWithRuntimeConditionsEmpty**
\`
FunctionWithRuntimeConditionsEmpty(): void
\`
"
`;

exports[`Runtime Conditions > Properly generates documentation for runtime conditions > msdocs/scriptapi/runtime-conditions/ClassWithRuntimeConditionsEmpty.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: runtime-conditions.ClassWithRuntimeConditionsEmpty Class
description: Contents of the runtime-conditions.ClassWithRuntimeConditionsEmpty class.
---
# ClassWithRuntimeConditionsEmpty Class

## Properties

### **propA**
\`read-only propA: propA;\`

Type: [*propA*](propA.md)
"
`;

exports[`Runtime Conditions > Properly generates documentation for runtime conditions > msdocs/scriptapi/runtime-conditions/InterfaceWithNoRuntimeConditions.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: runtime-conditions.InterfaceWithNoRuntimeConditions Interface
description: Contents of the runtime-conditions.InterfaceWithNoRuntimeConditions class.
---
# InterfaceWithNoRuntimeConditions Interface

## Properties

### **propA**
\`read-only propA: propA;\`

Type: [*propA*](propA.md)
"
`;

exports[`Runtime Conditions > Properly generates documentation for runtime conditions > msdocs/scriptapi/runtime-conditions/InterfaceWithRuntimeConditions.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: runtime-conditions.InterfaceWithRuntimeConditions Interface
description: Contents of the runtime-conditions.InterfaceWithRuntimeConditions class.
---
# InterfaceWithRuntimeConditions Interface
 
## Required Experiments
- Runtime Conditions A
- Runtime Conditions B


## Properties

### **propA**
\`read-only propA: propA;\`

Type: [*propA*](propA.md)
"
`;

exports[`Runtime Conditions > Properly generates documentation for runtime conditions > msdocs/scriptapi/runtime-conditions/InterfaceWithRuntimeConditionsEmpty.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: runtime-conditions.InterfaceWithRuntimeConditionsEmpty Interface
description: Contents of the runtime-conditions.InterfaceWithRuntimeConditionsEmpty class.
---
# InterfaceWithRuntimeConditionsEmpty Interface

## Properties

### **propA**
\`read-only propA: propA;\`

Type: [*propA*](propA.md)
"
`;

exports[`Runtime Conditions > Properly generates documentation for runtime conditions > msdocs/scriptapi/runtime-conditions/runtime-conditions.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: runtime-conditions Module
description: Contents of the runtime-conditions module
---
# \`runtime-conditions\` Module

## Manifest Details
\`\`\`json
{
    "module_name": "runtime-conditions",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0\`

## Classes
- [ClassWithNoRuntimeConditions](ClassWithNoRuntimeConditions.md)
- [ClassWithRuntimeConditions](ClassWithRuntimeConditions.md)
- [ClassWithRuntimeConditionsEmpty](ClassWithRuntimeConditionsEmpty.md)

## Interfaces
- [InterfaceWithNoRuntimeConditions](InterfaceWithNoRuntimeConditions.md)
- [InterfaceWithRuntimeConditions](InterfaceWithRuntimeConditions.md)
- [InterfaceWithRuntimeConditionsEmpty](InterfaceWithRuntimeConditionsEmpty.md)
"
`;

exports[`Runtime Conditions > Properly generates documentation for runtime conditions > typescript/runtime-conditions@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "runtime-conditions",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class ClassWithNoRuntimeConditions {
    private constructor();
    readonly propA: propA;
}

/**
 *
 * Required Experiments:
 * - Runtime Conditions A
 * - Runtime Conditions B
 * - Runtime Conditions C
 *
 */
export class ClassWithRuntimeConditions {
    private constructor();
    readonly propA: propA;
    FunctionWithNoRuntimeConditions(): void;
    /**
     *
     * Required Experiments:
     * - Runtime Conditions D
     *
     */
    FunctionWithRuntimeConditions(): void;
    FunctionWithRuntimeConditionsEmpty(): void;
}

export class ClassWithRuntimeConditionsEmpty {
    private constructor();
    readonly propA: propA;
}

export interface InterfaceWithNoRuntimeConditions {
    readonly propA: propA;
}

/**
 *
 * Required Experiments:
 * - Runtime Conditions A
 * - Runtime Conditions B
 *
 */
export interface InterfaceWithRuntimeConditions {
    readonly propA: propA;
}

export interface InterfaceWithRuntimeConditionsEmpty {
    readonly propA: propA;
}
"
`;
